# smbuilder-old

./: .gitignore  Cargo.toml  README.md  TODO.md  bacon.toml  makefile  repos.yaml  sample.yaml  sample_spec.yaml
crates/smbuilder/: Cargo.toml  builder.rs  common.rs  lib.rs  makeopts.rs
crates/smbuilder/lib/: builder.rs  common.rs  makeopts.rs  prelude.rs
crates/smbuilder/sample_build/fake-repo-name/: whatever-files
doc/: builder.md  crate.md
gtksmbuilder/: Cargo.toml
sample_build/: build.sh  smbuilder.toml
sample_build/packs/foo-dynospack/: contents
scripts/: README.md  build_uis.py  install_deps.py
smbuilder/: Cargo.toml
smbuilder-cli/: .gitignore  Cargo.toml  README.md
smbuilder-cli/src/: lib.rs  main.rs
smbuilder-gui/: Cargo.toml
smbuilder-gui/src/: main.rs
smbuilder/src/: builder.rs  lib.rs  prelude.rs  spec.rs  types.rs  util.rs
smbuilder/src/builder/: builder.rs  mod.rs  types.rs
smbuilder/src/callbacks/: mod.rs  types.rs
smbuilder/src/error/: cause.rs  macros.rs  mod.rs
smbuilder/src/types/: errors.rs  makeopts.rs  mod.rs
smbuilder_cli/: Cargo.toml
smbuilder_cli/src/: cli_parser.rs  lib.rs  main.rs
src/: build.rs  builder.rs  error.rs  lib.rs  logger.rs  main.rs  makeopts.rs  prelude.rs  settings.rs  spec.rs  types.rs
src/builder/: build.rs  builder.rs  mod.rs  traits.rs  types.rs
src/cli/: mod.rs
src/ui/: build_new.rs  build_select.rs  mod.rs
src/ui/build_new/: mod.rs  repo_select.rs
ui_blueprints/: main.blp
ui_xml/: main.ui
