[package]
name = "smbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
colored = "2.0.0"
derive_builder = "0.12.0"
git2 = "0.17.1"
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_yaml = "0.9.21"
