[package]
name = "smbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
ctrlc = "3.4.0"
duct = "0.13.6"
git2 = "0.18.0"
n64romconvert = "1.0.2"
serde = { version = "1.0.162", features = ["serde_derive"] }
serde_yaml = "0.9.22"
derive_builder = "0.12.0"
fs_extra = "1.3.0"
