[package]
name = "smbuilder_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
smbuilder = { path = "../crates/smbuilder" }
