[package]
name = "smbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smbuilder"
path = "lib/lib.rs"
test = true
crate-type = ["lib"]

[dependencies]
execute = "0.2.12"
git2 = "0.17.0"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"
